<resources>
    <string name="app_name">Parking App</string>
    <string name="offline_data_file">offline_data.json</string>
    <string name="spot_number">Spot #%d</string>
    <string name="located_on">Located on %s</string>
    <string name="string_number">%d</string>
    <string name="available_spot">AVAILABLE</string>
    <string name="booked_spot">BOOKED</string>
    <string name="booked_spots">BOOKED SPOTS</string>
    <string name="size">SIZE</string>
    <string name="book">BOOK</string>
    <string name="release">RELEASE</string>
    <string name="vehicle">VEHICLE</string>
    <string name="empty_spot">This spot is currently empty.</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="release_dialog_title">Release Spot</string>
    <string name="release_dialog_description">Are you sure you want to release this spot?</string>
    <string name="spot_booked_successfully">Spot booked successfully</string>
    <string name="book_spot_title">Book Spot</string>
    <string name="spot_book_spot_data">Spot: Spot #%d - Size: %d</string>
    <string name="vehicle_search_label">Please enter the vehicle size</string>
    <string name="search_title">Find a Spot</string>
    <string name="error_title">Error</string>
    <string name="network_error">Error fetching parking data</string>
    <string name="offline_data">Using offline parking data</string>
    <string name="error_releasing_spot">Error releasing spot</string>
    <string name="error_booking_spot">Error booking spot</string>
    <string name="big_enough_spot_error">There are no spots available that can fit that vehicle.</string>
    <string name="find_parking">Find the first parking spot where your vehicle can park:</string>
</resources>
