<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.spots.detail.SpotDetailActivity">

    <!-- Binding Data Definition -->
    <data>

        <variable
            name="spot"
            type="com.icabanas.parkinggaragechallenge.vo.Spot"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/base_toolbar" />

        <LinearLayout
            android:orientation="vertical"
            android:background="@color/grey_bg_color"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/SmallLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:includeFontPadding="false"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="20dp"
                android:text="@{String.format(@string/string_number, spot.size)}"
                android:textSize="45sp"
                tools:text="60" />

            <TextView
                style="@style/SmallLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/vehicle" />

            <TextView
                app:visibleOrGone="@{spot.vehicle == null}"
                style="@style/SmallLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/empty_spot" />

            <android.support.v7.widget.CardView
                app:visibleOrGone="@{spot.vehicle != null}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/carIcon"
                        android:layout_width="@dimen/car_icon_size"
                        android:layout_height="@dimen/car_icon_size"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/car_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/brandLabel"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:text="Brand:"
                        app:layout_constraintStart_toEndOf="@+id/carIcon"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/CarItemLabel" />

                    <TextView
                        android:id="@+id/plateLabel"
                        style="@style/CarItemLabel"
                        android:text="Plate:"
                        app:layout_constraintStart_toStartOf="@+id/brandLabel"
                        app:layout_constraintTop_toBottomOf="@+id/brand" />

                    <TextView
                        android:id="@+id/colorLabel"
                        style="@style/CarItemLabel"
                        android:text="Color:"
                        app:layout_constraintStart_toStartOf="@+id/plateLabel"
                        app:layout_constraintTop_toBottomOf="@+id/plate" />

                    <TextView
                        android:id="@+id/sizeLabel"
                        style="@style/CarItemLabel"
                        android:layout_marginBottom="8dp"
                        android:text="Size:"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/colorLabel"
                        app:layout_constraintTop_toBottomOf="@+id/color" />

                    <TextView
                        android:id="@+id/brand"
                        style="@style/CarItemValue"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:text="@{spot.vehicle.brand}"
                        app:layout_constraintStart_toEndOf="@+id/brandLabel"
                        app:layout_constraintTop_toTopOf="@+id/brandLabel"
                        tools:text="Nissan" />

                    <TextView
                        android:id="@+id/plate"
                        style="@style/CarItemValue"
                        android:text="@{spot.vehicle.plate}"
                        app:layout_constraintStart_toStartOf="@+id/brand"
                        app:layout_constraintTop_toTopOf="@+id/plateLabel"
                        tools:text="SBP 3333" />


                    <TextView
                        android:id="@+id/color"
                        style="@style/CarItemValue"
                        android:text="@{spot.vehicle.color}"
                        app:layout_constraintStart_toStartOf="@+id/plate"
                        app:layout_constraintTop_toTopOf="@+id/colorLabel"
                        tools:text="Blue" />


                    <TextView
                        android:id="@+id/size"
                        style="@style/CarItemValue"
                        android:text="@{String.format(@string/string_number, spot.vehicle.size)}"
                        app:layout_constraintStart_toStartOf="@+id/color"
                        app:layout_constraintTop_toTopOf="@+id/sizeLabel"
                        tools:text="30" />




                </android.support.constraint.ConstraintLayout>



            </android.support.v7.widget.CardView>

            <Button
                app:visibleOrGone="@{spot.vehicle != null}"
                android:id="@+id/releaseBtn"
                style="@style/ActionButton"
                android:text="@string/release" />

            <Button
                app:visibleOrGone="@{spot.vehicle == null}"
                android:id="@+id/bookBtn"
                style="@style/ActionButton"
                android:text="@string/book" />

        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>
