<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.spots.search.SearchSpotActivity">

    <!-- Binding Data Definition -->
    <data>

        <variable
            name="spot"
            type="com.icabanas.parkinggaragechallenge.vo.Spot" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/base_toolbar" />


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@color/grey_bg_color">

            <android.support.v7.widget.CardView
                android:id="@+id/searchCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/search_spot_card_margin"
                android:padding="@dimen/search_spot_card_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:maxLength="2"
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_search"
                    android:drawableTint="@color/colorAccent"
                    android:hint="@string/vehicle_search_label"
                    android:inputType="number" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                app:visibleOrGone="@{spot != null}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/search_spot_card_margin"
                android:padding="@dimen/search_spot_card_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchCard">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/spotName"
                        style="@style/BigTitle"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@{String.format(@string/spot_number, spot.id)}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Spot #1" />

                    <TextView
                        android:id="@+id/sizeLabel"
                        style="@style/SmallLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:includeFontPadding="false"
                        android:text="@string/size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/sizeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/open_sans_regular"
                        android:includeFontPadding="false"
                        android:text="@{String.format(@string/string_number, spot.size)}"
                        android:textSize="45sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sizeLabel"
                        tools:text="60" />


                    <Button
                        android:id="@+id/bookBtn"
                        style="@style/ActionButton"
                        android:layout_margin="4dp"
                        android:text="@string/book"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sizeValue"
                        app:layout_constraintVertical_bias="0.0" />


                </android.support.constraint.ConstraintLayout>


            </android.support.v7.widget.CardView>

            <TextView
                app:visibleOrGone="@{spot == null}"
                android:id="@+id/noResultsFound"
                android:gravity="center"
                style="@style/SmallLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:includeFontPadding="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchCard" />

        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>